@@ -25,6 +25,7 @@ tasks.withType(JavaCompile) {
 tasks.withType(Test) {
     maxParallelForks = 2
     forkEvery = 100
+    jvmArgs += ['-Dnet.bytebuddy.experimental=true']
 }
 
 repositories {
